tests/rosetta/transpiler/FS/file-input-output-1.error
compile: exit status 1
F# Compiler for F# 4.0 (Open Source Edition)
Freely distributed under the Apache 2.0 Open Source License

/workspace/mochi/tests/rosetta/transpiler/FS/file-input-output-1.fs(3,1): warning FS0221: The declarations in this file will be placed in an implicit module 'File-input-output-1' based on the file name 'file-input-output-1.fs'. However this is not a valid F# identifier, so the contents will not be accessible from other files. Consider renaming the file or adding a 'module' or 'namespace' declaration at the top of the file.

/workspace/mochi/tests/rosetta/transpiler/FS/file-input-output-1.fs(21,65): error FS0001: This expression was expected to have type
    string    
but here has type
    obj    

/workspace/mochi/tests/rosetta/transpiler/FS/file-input-output-1.fs(36,11): warning FS0049: Uppercase variable identifiers should not generally be used in patterns, and may indicate a misspelt pattern name.

/workspace/mochi/tests/rosetta/transpiler/FS/file-input-output-1.fs(36,11): warning FS0049: Uppercase variable identifiers should not generally be used in patterns, and may indicate a misspelt pattern name.
